changing text align center bug

--- a/public/css/request.css
+++ b/public/css/request.css
@@ -17,6 +17,7 @@
     color: black;
     text-align: center;
     font-size: 2.2rem;
+    width: 100%;
 }
 
 .text p {
